--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,24 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
-  <title>MyApp</title>
+  <title>Shopping site</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>
+    <div class="loading-overlay">
+      <div class="spinner">
+        <div class="element1"></div>
+        <div class="element2"></div>
+      </div>
+    </div>
+  </app-root>
 </body>
+
 </html>
